# django-hypermodern-cookiecutter

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .coveragerc  .dockerignore  .env.example  .eslintrc.js  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md  docker-compose.yml  jest.config.js  manage.py  package.json  pyproject.toml  pytest.ini  tsconfig.json
{{cookiecutter.project_name}}/deployment/django/cmds/: celery_start  entrypoint  start
{{cookiecutter.project_name}}/static/baton/: baton.min.js
{{cookiecutter.project_name}}/static/js/__tests__/: setupTests.ts
{{cookiecutter.project_name}}/static/js/entrypoints/: admin.js  select2.ts
{{cookiecutter.project_name}}/static/js/interfaces/: models.ts
{{cookiecutter.project_name}}/static/js/types/: global.d.ts
{{cookiecutter.project_name}}/static/scss/: base.scss  main.scss
{{cookiecutter.project_name}}/static/scss/components/: _all.scss  _avatars.scss
{{cookiecutter.project_name}}/static/scss/core/: _all.scss  _font-sizes.scss  _fonts.scss
{{cookiecutter.project_name}}/static/scss/layouts/: _all.scss
{{cookiecutter.project_name}}/templates/: _messages.html  clear.html  empty.html  react_print.html
{{cookiecutter.project_name}}/templates/account/: base.html
{{cookiecutter.project_name}}/templates/account/email/: email_confirmation_message.txt
{{cookiecutter.project_name}}/templates/admin/: base_site.html
{{cookiecutter.project_name}}/templates/bootstrap5/: field.html
{{cookiecutter.project_name}}/templates/http_errors/: base.html
{{cookiecutter.project_name}}/templates/inclusion_tags/: avatar.html  modal.html
{{cookiecutter.project_name}}/templates/lockdown/: form.html
{{cookiecutter.project_name}}/templates/socialaccount/: authentication_error.html  signup.html
{{cookiecutter.project_name}}/templates/socialaccount/snippets/: provider_list.html
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: asgi.py  celery.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/apps/: applications.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/apps/core/: account_adapter.py  admin.py  apps.py  django_standard_messages.py  models.py  socialaccount_adapter.py  tasks.py  urls.py  utils.py  widgets.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/apps/core/templates/: 400.html  (+4 more)
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/settings/: base.py  dev.py  prod.py  test.py
(+13 files in other folders)
